# image-service

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.py
.github/workflows/: merge-with-master.yml  pull-request.yml
app/: app.py
app/routes/v1/: app.py
app/routes/v1/handlers/: images.py
services/: base.py
services/v1/: images.py
tests/: conftest.py  mocks.py
tests/services/: test_images.py
tests/utils/: test_resize_image.py
utils/: resize_image.py
utils/file_storage/: disk_file_storage.py
utils/tools/: singleton.py
